--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,11 @@ body {
 
 .col-md-3 {
     border-right: 1px solid rgb(235, 229, 229);
+    padding-right: 3%;
+}
+
+.col-md-8 {
+    padding-left: 3%;
 }
 
 li{
@@ -29,7 +34,12 @@ li{
 footer {
     margin: 3%;
 }
-
+.radios {
+    padding: 5%;
+}
+/* .signup {
+    margin: 5%;
+} */
 /* #border {
     padding: 3%;
 } */
@@ -68,3 +78,22 @@ footer {
     width: 100%;
 }
 
+/* layout.css Style */
+.upload-drop-zone {
+    height: 200px;
+    border-width: 2px;
+    margin-bottom: 20px;
+  }
+  
+  /* skin.css Style*/
+  .upload-drop-zone {
+    color: #ccc;
+    border-style: dashed;
+    border-color: #ccc;
+    line-height: 200px;
+    text-align: center
+  }
+  .upload-drop-zone.drop {
+    color: #222;
+    border-color: #222;
+  }
